[workspace]
members = [
    "node/seneca",
    "node/zeno",
    "pallets/template",
    "pallets/schemas",
    "pallets/credentials",
    "runtime/seneca",
    "runtime/zeno",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true
