[package]
name = "serv-node"
version = "4.0.0-dev"
description = "A substrate based chain for private computing & identity management."
authors = ["Serv Developers <https://github.com/serv-official>"]
homepage = "https://joinserv.com/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/serv-official/serv_testnet_backend"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "serv-node"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
hex-literal = "0.3.4"
rand = "0.8.5"
jsonrpsee = { version = "0.15.1", features = ["server"] }

sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", features = ["wasmtime"] }
sp-core = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", features = ["wasmtime"]  }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", features = ["wasmtime"]  }
sc-telemetry = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-keystore = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-keystore = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-transaction-pool = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-transaction-pool-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-finality-grandpa = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-client-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-chain-spec = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-runtime = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-timestamp = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-authorship = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-inherents = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-keyring = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-transaction-storage-proof = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-blockchain = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-block-builder = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
substrate-frame-rpc-system = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
frame-benchmarking-cli = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# frame dependencies
pallet-im-online = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
frame-system = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
pallet-transaction-payment = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
pallet-contracts = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# Local Dependencies
serv-runtime = {  path = "../runtime" }
node-primitives = { version = "2.0.0", default-features = false, path = "../primitives" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

[features]
default = []
runtime-benchmarks = [
    "serv-runtime/runtime-benchmarks",
    "frame-benchmarking-cli/runtime-benchmarks"
    ]